Controllers
Criação dos controllers e início do CRUD do usuário.